[BACKLOG-37325] Fix scrollbars for Schedule and Administration perspectives

--- a/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
+++ b/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
@@ -988,6 +988,7 @@ div#customDropdownPopupMajor .gwt-MenuBar-vertical .gwt-MenuItem:hover:not(.gwt-
 #pucContent {
   position: unset;
   flex: auto;
+  min-height: 0;
 }
 /* endregion #pucWrapper et al. */
 
